# VQE_molecular_energy

./: .gitignore  Hamitonians.ipynb  README.md  VQE.ipynb  VQE_Noise_Analysis.ipynb  pyproject.toml  requirements.txt
notebooks/: VQE.ipynb
src/vqe_molecular_energy/: __init__.py  main.py  molecules.py
tests/: test_molecules.py
