[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vqe-molecular-energy"
version = "0.1.0"
description = "Utilities and examples for VQE molecular energy calculations"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "ConnorSeck", email = "your.email@example.com" }
]
dependencies = [
  "numpy",
  "scipy"
  # add quantum packages you need, e.g. "qiskit" or "pennylane"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "flake8",
  "pre-commit"
]